<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_username">Please enter your username</string>
    <string name="username">Username:</string>
    <string name="password_label">Password:</string>
    <string name="password_field">Please enter your password</string>
    <string name="password_confirm_label">Confirm Password:</string>
    <string name="password_confirm_field">Please confirm your password</string>
    <string name="random">random</string>



</resources>
