<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/username"
            android:text="@string/username"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/enter_username"
            android:hint="@string/enter_username"
            android:layout_toRightOf="@+id/username"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_field_layout"
        android:layout_below="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/password_label"
            android:text="@string/password_label"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_field"
            android:hint="@string/password_field"
            android:layout_toRightOf="@+id/password_label"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/password_confirm_field_layout"
        android:layout_below="@+id/password_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/password_confirm_label"
            android:text="@string/password_confirm_label"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:text="@string/random"
            android:id="@+id/password_confirm_field"
            android:hint="@string/password_confirm_field"
            android:layout_toRightOf="@+id/password_label"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/submit_button"
        android:text="@string/submit"
        android:textSize="32sp"
        android:layout_below="@+id/password_confirm_field_layout"
        android:layout_alignRight="@+id/password_confirm_field_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>
